@@ -1,257 +1,0 @@
-# this file is autogenerated (except for transports); do not hand edit
-infantry =
-{
-	adal_guerilla_warfare = 27
-	adal_gunpowder_warfare = 13
-	african_clubmen = 4
-	african_hill_warfare = 8
-	african_spearmen = 4
-	african_western_franchise_warfare = 24
-	afsharid_reformed_infantry = 26
-	algonkin_tomahawk_charge = 7
-	american_western_franchise_warfare = 33
-	anglofrench_line = 33
-	apache_guerilla = 25
-	asian_arquebusier = 19
-	asian_mass_infantry = 17
-	asian_musketeer = 21
-	austrian_grenzer = 30
-	austrian_jaeger = 49
-	austrian_tercio = 26
-	austrian_white_coat = 42
-	aztec_gunpowder_warfare = 13
-	aztec_hill_warfare = 8
-	aztec_tribal_warfare = 5
-	bantu_gunpowder_warfare = 12
-	bantu_plains_warfare = 7
-	bantu_tribal_warfare = 5
-	bardiche_infantry = 3
-	bhonsle_infantry = 27
-	british_redcoat = 45
-	british_square = 56
-	chinese_footsoldier = 7
-	chinese_longspear = 4
-	creek_arquebusier = 13
-	durrani_rifled_musketeer = 31
-	dutch_maurician = 22
-	eastern_carabinier = 35
-	eastern_medieval_infantry = 3
-	eastern_militia = 5
-	east_asian_spearmen = 3
-	ethiopian_guerilla_warfare = 24
-	ethiopian_gunpowder_warfare = 13
-	ethiopian_mountain_warfare = 8
-	french_bluecoat = 45
-	french_impulse = 56
-	gaelic_free_shooter = 19
-	gaelic_galloglaigh = 8
-	gaelic_mercenary = 10
-	germanized_pike = 8
-	halberd_infantry = 3
-	han_banner = 17
-	huron_arquebusier = 11
-	inca_mountain_warfare = 8
-	indian_arquebusier = 11
-	indian_footsoldier = 4
-	indian_rifle = 30
-	irish_charge = 22
-	iroquis_rifle_scout = 19
-	italian_condotta = 11
-	japanese_archer = 5
-	japanese_footsoldier = 7
-	maharathan_guerilla_warfare = 23
-	mali_tribal_warfare = 5
-	mamluk_archer = 4
-	mamluk_duel = 6
-	maya_forest_warfare = 9
-	maya_guerilla_warfare = 25
-	maya_gunpowder_warfare = 13
-	maya_tribal_warfare = 5
-	mexican_guerilla_warfare = 24
-	mixed_order_infantry = 58
-	mongol_bow = 5
-	mughal_musketeer = 13
-	muscovite_musketeer = 15
-	muscovite_soldaty = 21
-	muslim_mass_infantry = 30
-	napoleonic_square = 61
-	native_clubmen = 3
-	native_indian_archer = 3
-	native_indian_mountain_warfare = 16
-	native_indian_tribal_warfare = 5
-	niger_kongolese_forest_warfare = 7
-	niger_kongolese_guerilla_warfare = 25
-	niger_kongolese_gunpowder_warfare = 13
-	niger_kongolese_tribal_warfare = 5
-	ottoman_azab = 9
-	ottoman_janissary = 13
-	ottoman_new_model = 39
-	ottoman_nizami_cedid = 32
-	ottoman_reformed_janissary = 27
-	ottoman_sekban = 22
-	ottoman_yaya = 5
-	persian_footsoldier = 4
-	persian_rifle = 38
-	persian_shamshir = 8
-	peruvian_guerilla_warfare = 24
-	polish_musketeer = 15
-	polish_tercio = 22
-	prussian_drill = 53
-	prussian_frederickian = 43
-	pueblo_ambush = 5
-	rajput_musketeer = 21
-	reformed_asian_musketeer = 29
-	reformed_mughal_musketeer = 20
-	russian_green_coat = 37
-	russian_mass = 53
-	russian_petrine = 26
-	saxon_infantry = 27
-	scottish_highlander = 29
-	sikh_hit_and_run = 25
-	songhai_tribal_warfare = 5
-	south_american_gunpowder_warfare = 13
-	south_american_spearmen = 4
-	south_american_warfare = 5
-	south_indian_musketeer = 14
-	spanish_tercio = 22
-	swedish_caroline = 34
-	swedish_gustavian = 29
-	swiss_landsknechten = 12
-	tipu_sultan_rocket = 27
-	tofongchis_musketeer = 13
-	westernized_adal = 19
-	westernized_aztec = 19
-	westernized_bantu = 18
-	westernized_ethiopian = 18
-	westernized_mayan = 19
-	westernized_niger_kongolese = 19
-	westernized_south_american = 18
-	westernized_zapotec = 17
-	western_longbow = 7
-	western_medieval_infantry = 3
-	western_men_at_arms = 7
-	zapotec_gunpowder_warfare = 11
-	zapotec_plains_warfare = 7
-	zapotec_tribal_warfare = 5
-	zulu_chest_and_horns = 14
-}
-cavalry =
-{
-	afsharid_reformed = 27
-	ali_bey_reformed_infantry = 36
-	asian_charge_cavalry = 24
-	austrian_hussar = 26
-	bhonsle_cavalry = 32
-	british_hussar = 41
-	chevauchee = 5
-	chinese_dragoon = 26
-	chinese_steppe = 8
-	commanche_swarm = 19
-	druzhina_cavalry = 5
-	durrani_dragoon = 33
-	durrani_swivel = 32
-	eastern_bow = 5
-	eastern_knights = 5
-	eastern_skirmisher = 32
-	eastern_uhlan = 36
-	east_mongolian_steppe = 11
-	french_carabinier = 38
-	french_caracolle = 13
-	french_cuirassier = 41
-	french_dragoon = 25
-	hungarian_hussar = 10
-	indian_archers = 6
-	indian_elephant = 15
-	indian_shock_cavalry = 20
-	japanese_samurai = 9
-	maharathan_cavalry = 23
-	mamluk_cavalry_charge = 8
-	mamluk_musket_charge = 16
-	manchu_banner = 28
-	mongolian_bow = 5
-	mongol_steppe = 9
-	mongol_swarm = 8
-	mughal_mansabdar = 15
-	muscovite_caracolle = 13
-	muscovite_cossack = 18
-	muslim_cavalry_archers = 8
-	muslim_dragoon = 27
-	napoleonic_lancers = 60
-	native_indian_horsemen = 9
-	open_order_cavalry = 55
-	ottoman_lancer = 32
-	ottoman_musellem = 7
-	ottoman_reformed_spahi = 17
-	ottoman_spahi = 11
-	ottoman_timariot = 10
-	ottoman_toprakli_dragoon = 36
-	ottoman_toprakli_hit_and_run = 20
-	persian_cavalry_charge = 8
-	polish_hussar = 12
-	polish_winged_hussar = 14
-	prussian_uhlan = 41
-	qizilbash_cavalry = 12
-	rajput_hill_fighters = 7
-	reformed_asian_cavalry = 34
-	reformed_manchu_rifle = 38
-	reformed_mughal_mansabdar = 22
-	russian_cossack = 34
-	russian_cuirassier = 37
-	russian_lancer = 17
-	shaybani = 10
-	sikh_rifle = 34
-	sioux_dragoon = 18
-	slavic_stradioti = 8
-	swedish_arme_blanche = 27
-	swedish_galoop = 14
-	tartar_cossack = 20
-	topchis_artillery = 15
-	western_medieval_knights = 5
-	zaporoghian_cossack = 17
-}
-galley =
-{
-	archipelago_frigate = 20
-	chebeck = 16
-	galleass = 14
-	galley = 12
-}
-light_ship =
-{
-	barque = 10
-	early_frigate = 20
-	frigate = 25
-	heavy_frigate = 30
-}
-big_ship =
-{
-	caravel = 25
-	carrack = 20
-	galleon = 30
-	threedecker = 60
-	twodecker = 50
-	wargalleon = 40
-}
-artillery =
-{
-	chambered_demi_cannon = 18
-	coehorn_mortar = 26
-	culverin = 16
-	flying_battery = 42
-	houfnice = 6
-	large_cast_bronze_mortar = 6
-	large_cast_iron_bombard = 13
-	leather_cannon = 18
-	pedrero = 13
-	royal_mortar = 36
-	small_cast_iron_bombard = 12
-	swivel_cannon = 20
-}
-# all transports convert 1:1 into V2
-transport =
-{
-	cog = 24		# originally 20
-	eastindiaman = 24	# originally 28
-	flute = 24		# originally 22
-	merchantman = 24
-}
